Feb15 carta update

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -178,5 +178,12 @@
   "fontallada_brut_nature_2020_desc": "Macabeo, Xarel.lo, Parellada",
   "llopart_brut_nature_reserva_2019": "Llopart Brut Nature reserva 2019",
   "llopart_brut_nature_reserva_2019_desc": "Macabeo, Xarel.lo, Parellada, Chardonnay",
-  "do_cava": "D.O Cava"
+  "do_cava": "D.O Cava",
+
+  "tempura_hake_cubes_with_marinade": "Daus de lluç en tempura amb maionesa d'adob",
+  "iberian_bacon_demi_glace": "Cansalada ibèrica en el seu demi-glace amb salsa agra a la menta",
+  "madrid_style_tripe": "Callos a la madrilenya",
+  "goat_cheese_salad": "Amanida de formatge de cabra",
+  "goat_cheese_salad_desc": "compota de poma i vinagreta de mel i mostassa",
+  "iberian_ham_100_bellota_desc": "tallat a mà 80gr"
 }
